--- a/MemoryMosaic/Shared/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/CollectionSelector.razor
@@ -3,7 +3,7 @@
 
 <link href="/css/components/CollectionSelector.css" rel="stylesheet">
 
-<div id="collectionSelectorBackground" style="visibility: @CollectionsVis">
+<div id="collectionSelectorBackground" style="visibility: @collectionsVis">
     <div id="collectionSelector">
         <div id="header">
             <span>Add to</span>
@@ -90,7 +90,7 @@
     [Parameter]
     public EventCallback<string> HeaderVisChanged { get; set; } //Two-way binding.
 
-    private string CollectionsVis = "hidden";
+    private string collectionsVis = "hidden";
     
     [Parameter]
     public Action? OnCheckClicked { get; set; } //Used in Import for overriding the default behavior.
@@ -138,7 +138,7 @@
 
     public async void ToggleVis()
     {
-        CollectionsVis = CollectionsVis == "hidden" ? "visible" : "hidden";
+        collectionsVis = collectionsVis == "hidden" ? "visible" : "hidden";
         await JSRuntime.InvokeVoidAsync("toggleBackgroundScrolling");
         StateHasChanged();
     }
@@ -146,7 +146,7 @@
     //Closing the div for selecting album(s) to add selected items to.
     private async Task CloseBtnClick()
     {
-        CollectionsVis = "hidden";
+        collectionsVis = "hidden";
         await JSRuntime.InvokeVoidAsync("disableBackgroundScrolling");
         ClearAlbumChecks();
         ClearFolderChecks();
@@ -157,7 +157,7 @@
         foreach (Guid item in SelectedItems!)
             await JSRuntime.InvokeAsync<string>("removeCheck", item);
         SelectedItems.Clear();
-        CollectionsVis = "hidden";
+        collectionsVis = "hidden";
         HeaderVis = "hidden";
         await HeaderVisChanged.InvokeAsync("hidden");
     }
