--- a/MemoryMosaic/Shared/NavMenu.razor
+++ b/MemoryMosaic/Shared/NavMenu.razor
@@ -4,11 +4,10 @@
     }
     
     nav {
-        margin-left: -10px;
-        margin-top: 0;
+        left: 0;
+        top: 0;
         position: fixed;
         overflow-y: scroll;
-        user-select: none;
         scrollbar-width: none; /* Hide scrollbars in Firefox */
         width: 132px;
     }
