--- a/MemoryMosaic/wwwroot/css/CollectionView.css
+++ b/MemoryMosaic/wwwroot/css/CollectionView.css
@@ -64,10 +64,9 @@ header > #selectedAmtText {
     background-color: black;
     display: flex;
     align-items: center;
-    letter-spacing: .01785714em;
     font-size: 1rem;
     font-weight: 400;
-    padding: 11px 12px 11px 10px;
+    padding: 11px;
 }
 
 header > #collectionRenameDiv {
