--- a/MemoryMosaic/wwwroot/css/CollectionsMain.css
+++ b/MemoryMosaic/wwwroot/css/CollectionsMain.css
@@ -19,7 +19,6 @@ header {
 header > #collectionsText {
     font-size: 1.125rem;
     font-weight: 400;
-    letter-spacing: 0;
     line-height: 1.5rem;
     margin-left: 10px;
     margin-right: 40px;
@@ -60,7 +59,6 @@ header > #sortDiv {
     right: 250px;
     background-color: black;
     border: 1px solid white;
-    padding-right: 12px;
 }
 
 header > #sortDiv > button {
@@ -68,10 +66,9 @@ header > #sortDiv > button {
     border: none;
     display: flex;
     align-items: center;
-    letter-spacing: .01785714em;
     font-size: 1rem;
     font-weight: 400;
-    padding: 11px 11px 11px 10px;
+    padding: 11px;
 }
 
 #mainDiv {
@@ -119,7 +116,6 @@ header > #sortDiv > button {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    letter-spacing: .0178571429em;
     font-weight: 500;
     margin-top: 7px;
     margin-left: 5px;
