--- a/MemoryMosaic/wwwroot/css/Trash.css
+++ b/MemoryMosaic/wwwroot/css/Trash.css
@@ -51,7 +51,6 @@ header > #sortDiv {
     right: 330px;
     background-color: black;
     border: 1px solid white;
-    padding-right: 12px;
     z-index: 9999;
 }
 
@@ -61,10 +60,8 @@ header > #sortDiv {
     background-color: black;
     display: flex;
     align-items: center;
-    letter-spacing: .01785714em;
     font-size: 1rem;
-    font-weight: 400;
-    padding: 11px 11px 11px 10px;
+    padding: 11px;
 }
 
 #sortDiv > button:hover {
