Move 2 data structures to their own folder

--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -1,6 +1,7 @@
 @page "/import"
 @using CS = MemoryMosaic.Shared.CollectionSelector;
 @using System.Text
+@using MemoryMosaic.DataStructures
 @inject IJSRuntime JSRuntime
 
 <title>Import - MemoryMosaic</title>
