--- a/MemoryMosaic/Shared/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/CollectionSelector.razor
@@ -78,25 +78,19 @@
 
     private CollectionCreator collectionCreator = null!;
 
-    [Parameter]
-    public Guid SelectedItem { get; set; } = Guid.Empty; //Used in LCV when viewing a single item.
-    
-    [Parameter]
-    public HashSet<Guid>? SelectedItems { get; set; } //Items selected by user.
-    
-    [Parameter]
-    public string? HeaderVis { get; set; } = "hidden"; //The visibility of the header on the page, if one exists.
-    
-    [Parameter]
-    public EventCallback<string> HeaderVisChanged { get; set; } //Two-way binding.
+    [Parameter, EditorRequired] public HashSet<Guid> SelectedItems { get; set; } = null!;
 
+    [Parameter] public Guid SelectedItem { get; set; } = Guid.Empty; //Used in LCV when viewing a single item.
+    
+    [Parameter] public string? HeaderVis { get; set; } = "hidden"; //The visibility of the header on the page, if one exists.
+    
+    [Parameter] public EventCallback<string> HeaderVisChanged { get; set; } //Two-way binding.
+    
+    [Parameter] public Action? OnCheckClicked { get; set; } //Used in Import for overriding the default behavior.
+
+    [Parameter] public bool ClearChecksOnConfirm { get; set; } = true; //Used in Import.
+    
     private string collectionsVis = "hidden";
-    
-    [Parameter]
-    public Action? OnCheckClicked { get; set; } //Used in Import for overriding the default behavior.
-
-    [Parameter]
-    public bool ClearChecksOnConfirm { get; set; } = true; //Used in Import.
 
     protected override void OnInitialized()
     {
@@ -154,7 +148,7 @@
     
     private async Task ClearChecks()
     {
-        foreach (Guid item in SelectedItems!)
+        foreach (Guid item in SelectedItems)
             await JSRuntime.InvokeAsync<string>("removeCheck", item);
         SelectedItems.Clear();
         collectionsVis = "hidden";
@@ -189,7 +183,7 @@
                 }
                 else
                 {
-                    foreach (Guid item in SelectedItems!)
+                    foreach (Guid item in SelectedItems)
                         await C.AddToCollectionAsync(item, folders[checkedFolderIndex].id);
                 }
             }
@@ -205,7 +199,7 @@
                     }
                     else
                     {
-                        foreach (Guid item in SelectedItems!)
+                        foreach (Guid item in SelectedItems)
                             await C.AddToCollectionAsync(item, albums[c].id);
                     }
                 }
@@ -220,7 +214,7 @@
         if (ClearChecksOnConfirm)
         {
             await ClearChecks();
-            SelectedItems?.Clear();
+            SelectedItems.Clear();
             await HeaderVisChanged.InvokeAsync("hidden");
         }
     }
