Fix inconsistencies with <link>s across the project.

--- a/MemoryMosaic/Pages/Memories.razor
+++ b/MemoryMosaic/Pages/Memories.razor
@@ -1,7 +1,7 @@
 @page "/memories"
 
-<link rel="stylesheet" href="css/components/ViewItem.css">
-<link rel="stylesheet" href="css/Memories.css">
+<link rel="stylesheet" href="css/components/ViewItem.css"/>
+<link rel="stylesheet" href="css/Memories.css"/>
 
 <title>Memories - MM</title>
 
