--- a/MemoryMosaic/Shared/CollectionCreator.razor
+++ b/MemoryMosaic/Shared/CollectionCreator.razor
@@ -1,5 +1,5 @@
 @* Reusable component for a simple interface to create new albums and folders *@
-<link href="/css/components/CollectionCreator.css" rel="stylesheet">
+<link href="css/components/CollectionCreator.css" rel="stylesheet"/>
 
 <div id="collectionCreator">
     <button class="iconBtn" @onclick="@NewCollectionBtnClick" title="@newCollectionBtnTitle"><span class="material-icons-outlined">@newCollectionBtnIcon</span></button>
