--- a/MemoryMosaic/Shared/CtrlGInput.razor
+++ b/MemoryMosaic/Shared/CtrlGInput.razor
@@ -1,5 +1,5 @@
 @* Re-usable component for allowing user to choose the date taken they want LCV to start at. *@
-<link href="/css/components/CtrlGInput.css" rel="stylesheet">
+<link href="css/components/CtrlGInput.css" rel="stylesheet"/>
 
 <div id="ctrlGBackground" style="visibility: @ctrlGVis">
 	<div id="ctrlGInput">
