--- a/MemoryMosaic/Shared/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer.razor
@@ -5,8 +5,8 @@ The default amount of items loaded at a time is 50.
 If it can't find any content, it shows an h1 saying no content.
 *@
 @inject IJSRuntime JSRuntime
-<link href="/css/components/ViewItem.css" rel="stylesheet">
-<link href="/css/components/LibraryContentViewer.css" rel="stylesheet">
+<link href="css/components/ViewItem.css" rel="stylesheet"/>
+<link href="css/components/LibraryContentViewer.css" rel="stylesheet"/>
 
 @if (MediaList.Count == 0)
 {
