--- a/MemoryMosaic/Shared/LibraryItem.razor
+++ b/MemoryMosaic/Shared/LibraryItem.razor
@@ -1,5 +1,5 @@
 ﻿@using MemoryMosaic.Pages
-<link href="css/components/LibraryItem.css" rel="stylesheet">
+<link href="css/components/LibraryItem.css" rel="stylesheet"/>
 
 <div class="libraryItem">
 	<span class="material-icons-outlined checkbox unchecked">check_circle</span>
