--- a/MemoryMosaic/Shared/ProgressPopUp.razor
+++ b/MemoryMosaic/Shared/ProgressPopUp.razor
@@ -1,5 +1,5 @@
 @* Reusable component for a simple popup for long-running processes to prevent user from navigating away from page. *@
-<link href="/css/components/ProgressPopUp.css" rel="stylesheet">
+<link href="css/components/ProgressPopUp.css" rel="stylesheet"/>
 
 <div id="popupBackground" style="display: @(Visible ? "inline" : "none")">
     <div id="progressPopUp" style="width: @(Width + "px"); height: @(Height + "px")">
