--- a/MemoryMosaic/Shared/ShortcutsReference.razor
+++ b/MemoryMosaic/Shared/ShortcutsReference.razor
@@ -1,5 +1,5 @@
 @* Overlay thing for showing all the shortcuts in PSS *@
-<link href="/css/components/ShortcutsReference.css" rel="stylesheet">
+<link href="css/components/ShortcutsReference.css" rel="stylesheet"/>
 
 <div id="referenceBackground" style="visibility: @visibility">
     <div id="reference">
