--- a/MemoryMosaic/Shared/TwoChoiceInput.razor
+++ b/MemoryMosaic/Shared/TwoChoiceInput.razor
@@ -13,7 +13,7 @@
     5. String NoBtnIcon. The Google Icons icon for the No button. Default is "close".
 *@
 @using MemoryMosaic.Backend
-<link href="css/components/TwoChoiceInput.css" rel="stylesheet">
+<link href="css/components/TwoChoiceInput.css" rel="stylesheet"/>
 
 <div id="inputBackground" style="visibility: @TwoChoiceVis">
     <div id="inputDiv" style="@PositioningStyle">
