--- a/MemoryMosaic/Pages/CollectionsMain.razor
+++ b/MemoryMosaic/Pages/CollectionsMain.razor
@@ -2,7 +2,7 @@
 @page "/collections"
 
 <title>Collections - MemoryMosaic</title>
-<link href="css/CollectionsMain.css" rel="stylesheet">
+<link href="css/CollectionsMain.css" rel="stylesheet"/>
 
 <header>
     <span id="collectionsText">Collections</span>
