--- a/MemoryMosaic/Pages/Maintenance/Backups.razor
+++ b/MemoryMosaic/Pages/Maintenance/Backups.razor
@@ -1,7 +1,7 @@
 @page "/maintenance/backups"
 
 <title>Backups — Maintenance - MemoryMosaic</title>
-<link href="css/maintenance/Backups.css" rel="stylesheet">
+<link href="css/maintenance/Backups.css" rel="stylesheet"/>
 
 @{
     <header>
