--- a/MemoryMosaic/Pages/Maintenance/MissingFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/MissingFiles.razor
@@ -1,7 +1,7 @@
 @page "/maintenance/missing-files"
 
 <title>Missing Files — Maintenance - MM</title>
-<link href="css/maintenance/MissingFiles.css" rel="stylesheet">
+<link href="css/maintenance/MissingFiles.css" rel="stylesheet"/>
 
 <header>
     <button class="textBtn" @onclick="@DeleteMissingPaths">
