--- a/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
@@ -1,7 +1,7 @@
 @page "/maintenance/untracked-files"
 
 <title>Untracked Files — Maintenance - MM</title>
-<link href="css/maintenance/UntrackedFiles.css" rel="stylesheet">
+<link href="css/maintenance/UntrackedFiles.css" rel="stylesheet"/>
 
 <header>
     <button class="textBtn" @onclick="@MoveAll">
