--- a/MemoryMosaic/Shared/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/CollectionSelector.razor
@@ -1,7 +1,7 @@
 @* Reusable component that allows user to choose album(s) or a folder to add selected item(s) to. *@
 @inject IJSRuntime JSRuntime
 
-<link href="/css/components/CollectionSelector.css" rel="stylesheet">
+<link href="css/components/CollectionSelector.css" rel="stylesheet"/>
 
 <div id="collectionSelectorBackground" style="visibility: @collectionsVis">
     <div id="collectionSelector">
