Change ToggleableComponent.visibility to a property

--- a/MemoryMosaic/Shared/CtrlGInput.razor
+++ b/MemoryMosaic/Shared/CtrlGInput.razor
@@ -2,7 +2,7 @@
 @inherits ToggleableComponent
 <link href="/css/components/CtrlGInput.css" rel="stylesheet">
 
-<div id="ctrlGBackground" style="@visibility.Style">
+<div id="ctrlGBackground" style="@Visibility.Style">
 	<div id="ctrlGInput">
 		<span>Choose New Starting Date Taken:</span>
 		
