--- a/MemoryMosaic/Classes/ToggleableComponent.razor
+++ b/MemoryMosaic/Classes/ToggleableComponent.razor
@@ -3,16 +3,16 @@
 @inject IJSRuntime JSRuntime
 
 @code{
-	protected readonly ElementVisibility visibility = new();
+	public ElementVisibility Visibility { get; } = new();
 	
-	public void Toggle() => UpdateState(!visibility.Visible);
+	public void Toggle() => UpdateState(!Visibility.Visible);
 	public void Disable() => UpdateState(false);
 	public void Enable() => UpdateState(true);
 
 	private void UpdateState(bool newState)
 	{
-		visibility.Visible = newState;
-		JSRuntime.InvokeVoidAsync($"{(visibility.Visible ? "disable" : "enable")}BackgroundScrolling");
+		Visibility.Visible = newState;
+		JSRuntime.InvokeVoidAsync($"{(Visibility.Visible ? "disable" : "enable")}BackgroundScrolling");
 		StateHasChanged();
 	}
 }
