--- a/MemoryMosaic/Shared/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/CollectionSelector.razor
@@ -4,7 +4,7 @@
 
 <link href="/css/components/CollectionSelector.css" rel="stylesheet">
 
-<div id="collectionSelectorBackground" style="@visibility.Style">
+<div id="collectionSelectorBackground" style="@Visibility.Style">
     <div id="collectionSelector">
         <div id="header">
             <span>Add to</span>
